--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
               <!-- here download attribute is used for adding download functionality to button  -->
               <a
-                href="Entry Level Web Developer Resume.pdf"
+                href="c:\Users\admin\Downloads\Kasudi cv.pdf"
                 download="SampleCV"
                 style="text-decoration: none;color: black;"
                 >Download CV</a
